# ChangeLog for rox-base/tasktray
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/rox-base/cvs-repo/gentoo-x86/rox-base/tasktray/ChangeLog,v 1.22 2007/11/26 13:39:45 lack Exp $

*tasktray-0.6.4 (26 Nov 2007)

  26 Nov 2007; Jim Ramsay <lack@gentoo.org> +tasktray-0.6.4.ebuild:
  New version: 0.6.4 is released

  26 Nov 2007; Jim Ramsay <lack@gentoo.org> -tasktray-0.4.2.1.ebuild,
  -tasktray-0.5.ebuild, -tasktray-0.5.2.ebuild:
  Cleanup of old versions

*tasktray-0.5.3-r1 (26 Nov 2007)

  26 Nov 2007; Jim Ramsay <lack@gentoo.org>
  +files/TaskTray-0.5.3-libwnck-2.20.patch, tasktray-0.5.3.ebuild,
  +tasktray-0.5.3-r1.ebuild:
  Bug 200055: TaskTray was incompatible with >=python-gnome-desktop-2.20

  15 Nov 2007; Samuli Suominen <drac@gentoo.org> tasktray-0.5.3.ebuild:
  amd64 stable wrt #197514

  31 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  tasktray-0.5.3.ebuild:
  stable x86, bug 197516

  30 Oct 2007; Ferris McCormick <fmccor@gentoo.org> tasktray-0.5.3.ebuild:
  Add ~sparc; rox-tasktray works.

*tasktray-0.5.3 (29 Jun 2007)

  29 Jun 2007; Jim Ramsay <lack@gentoo.org> +tasktray-0.5.3.ebuild:
  Version bump - 0.5.3 is released

*tasktray-0.5.2 (10 Jun 2007)

  10 Jun 2007; Jim Ramsay <lack@gentoo.org> tasktray-0.4.2.1.ebuild,
  tasktray-0.5.ebuild, +tasktray-0.5.2.ebuild:
  Marking ~amd64, and adding latest release (0.5.2)

*tasktray-0.5 (04 May 2007)

  04 May 2007; Jim Ramsay <lack@gentoo.org> +tasktray-0.5.ebuild:
  New version 0.5 released

  25 Apr 2007; Jim Ramsay <lack@gentoo.org>
  -files/tasktray-0.3.7-theme_not_set.patch, -tasktray-0.3.6.ebuild,
  -tasktray-0.3.7-r1.ebuild, -tasktray-0.3.8.ebuild, -tasktray-0.4.1.ebuild:
  Version Cleanup

  23 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
  tasktray-0.4.2.1.ebuild:
  stable x86, bug 175283

*tasktray-0.4.2.1 (02 Apr 2007)

  02 Apr 2007; Jim Ramsay <lack@gentoo.org> +tasktray-0.4.2.1.ebuild: