@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/rox-base/cvs-repo/gentoo-x86/rox-base/tasktray/Attic/tasktray-0.6.4.ebuild,v 1.1 2007/11/26 13:39:45 lack Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/rox-base/cvs-repo/gentoo-x86/rox-base/tasktray/Attic/tasktray-0.6.4.ebuild,v 1.2 2008/04/04 07:07:03 opfer Exp $
 
 ROX_LIB_VER=1.9.6
 inherit rox
@@ -12,7 +12,7 @@ SRC_URI="ftp://ftp.berlios.de/pub/rox4debian/apps/${MY_PN}-${PV}.tgz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~sparc ~x86"
+KEYWORDS="~amd64 ~sparc x86"
 IUSE=""
 
 RDEPEND=">=dev-python/gnome-python-desktop-2.12
