@@ -1,6 +1,10 @@
 # ChangeLog for rox-base/tasktray
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/rox-base/cvs-repo/gentoo-x86/rox-base/tasktray/ChangeLog,v 1.22 2007/11/26 13:39:45 lack Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/rox-base/cvs-repo/gentoo-x86/rox-base/tasktray/ChangeLog,v 1.23 2008/04/04 07:07:03 opfer Exp $
+
+  04 Apr 2008; Christian Faulhammer <opfer@gentoo.org>
+  tasktray-0.6.4.ebuild:
+  stable x86, bug 215624
 
 *tasktray-0.6.4 (26 Nov 2007)
 
